# spl-token-mint

./: .gitignore  README.md
client/: Cargo.toml
client/src/: main.rs
program/: Cargo.toml  solana_close_program.sh  solana_deploy.sh
program/src/: lib.rs
