[package]
name = "spl-token-mint"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5"
solana-program = "2.0.14"
spl-token = { version = "6.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "5.0.0", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib"]
